# dorna2-ompl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: config.hpp.in
resources/urdf/: DornaTA.urdf
src/: URDFFK.hpp  bindings.cpp  main.cpp  planer.hpp  planner.hpp
test/: test.py
